HLT-2804 - not showing in ipad landscape ..fix that - fixed issue with the more benefits and more extras not displaying properly - fixed issue where array of benefits and extras had an extra empty element where the more options or extras was present - fixed boldness issue with IE > 8

--- a/src/main/webapp/bundles/health/less/snapshot.less
+++ b/src/main/webapp/bundles/health/less/snapshot.less
@@ -16,7 +16,7 @@
   font-size: 12px;
   padding-bottom: 4px;
   .snapshot-title {
-	font-weight: bold;
+	font-weight: 600;
 	font-size: 12px;
   }
   ul.snapshot-list {
